--- a/estilos.css
+++ b/estilos.css
@@ -122,8 +122,13 @@ main {
 }
 
 .depoimento {
-    margin-bottom: 20px;
+    display: none;
 }
+
+.depoimento-ativo {
+    display: block;
+}
+
 
 footer {
     background-color: #2F9E41;
@@ -140,4 +145,16 @@ footer .logos img {
 
 footer .logos img:hover {
     transform: scale(1.1);
+}
+
+.noticia-imagens {
+    display: flex;
+    justify-content: center;
+    margin: 20px 0;
+}
+
+#imagem-principal {
+    max-width: 100%;
+    height: 500px;
+    border-radius: 10px;
 }
