--- a/estilos.css
+++ b/estilos.css
@@ -10,6 +10,10 @@ body {
     color: #333;
 }
 
+ul {
+    list-style: none;
+}
+
 header {
     background-color: #2F9E41;
     color: white;
@@ -23,43 +27,19 @@ header .logo img {
     width: 300px;
 }
 
-nav ul {
-    list-style: none;
-    display: flex;
-    justify-content: flex-end;
+.categorias {
+    display: none;
+    position: absolute;
+    background: #2F9E41;
 }
 
-nav ul li {
-    margin: 0 20px;
-}
-
-
-nav ul li a {
+.categorias a {
     color: white;
     text-decoration: none;
-    font-size: 16px;
 }
 
 .menu-categorias:hover .categorias {
     display: block;
-}
-
-.categorias {
-    display: none;
-    list-style: none;
-    background-color: #2F9E41;
-    position: absolute;
-    padding: 10px;
-    margin-top: 10px;
-    border-radius: 5px;
-}
-
-.categorias li {
-    margin: 10px 0;
-}
-
-.categorias li a {
-    color: white;
 }
 
 main {
@@ -70,6 +50,11 @@ main {
     display: grid;
     grid-template-columns: 1fr;
     gap: 20px;
+}
+
+.noticias a {
+    color: black;
+    text-decoration: none;
 }
 
 .noticia-destaque {
@@ -89,11 +74,11 @@ main {
 
 .outras-noticias {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     gap: 10px;
 }
 
-.outras-noticias .noticia {
+.noticia {
     background-color: #fff;
     padding: 10px;
     border-radius: 5px;
@@ -103,7 +88,7 @@ main {
     gap: 10px;
 }
 
-.outras-noticias .noticia img {
+.noticia img {
     width: 100px;
     height: auto;
 }
@@ -129,7 +114,6 @@ main {
     display: block;
 }
 
-
 footer {
     background-color: #2F9E41;
     color: white;
@@ -140,7 +124,6 @@ footer {
 footer .logos img {
     width: 100px;
     margin: 0 20px;
-    transition: transform 0.3s;
 }
 
 footer .logos img:hover {
@@ -157,4 +140,9 @@ footer .logos img:hover {
     max-width: 100%;
     height: 500px;
     border-radius: 10px;
+}
+
+.noticia-texto {
+    text-align: left;
+    line-height: 2;
 }
